# wordy

./: .gitignore  Cargo.toml  Dockerfile  build.rs
.github/workflows/: docker.yml
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.svelte  Card.svelte  Game.svelte  Home.svelte  api.js  app.css  longpress.js  routes.js  timer.svelte.js
src/: frontend.rs  game.rs  main.rs  words.toml
