[package]
name = "wordy"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
indexmap = { version = "2.14.0", features = ["serde"] }
rand = "0.10.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }
toml = "1.1.2"
tower-http = { version = "0.7.0", features = ["cors"] }
uuid = { version = "1.23.4", features = ["serde", "v7"] }
